--- a/YC/index.html
+++ b/YC/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="manifest" href="./manifest.json">
-<title>Smartfarm YC</title>
+<title>Smartfarm</title>
 </head>
 <style>
     .full-height {
@@ -15,6 +15,7 @@
 <body>
 <iframe 
     src="http://yc.beetopia.kro.kr" class="full-height"
-    frameborder="0">
+    allow="web-share; camera; microphone"
+    sandbox="allow-scripts allow-same-origin">
 </iframe>
 </body>
